picluster/deployments/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-route
spec:
  parentRefs:
  - name: gateway
  hostnames:
  - "prometheus.h.crlxs.io"
  rules:
  - backendRefs:
    - name: prometheus-svc.monitoring.svc.cluster.local
      port: 9090
